--- a/Yummi App/Views/Base.lproj/Main.storyboard
+++ b/Yummi App/Views/Base.lproj/Main.storyboard
@@ -140,11 +140,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mp7-gx-ELG">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mp7-gx-ELG">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="VUM-6j-k8z">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="VUM-6j-k8z">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ywv-ni-r3z">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="172"/>
@@ -165,17 +165,17 @@
                                                             <constraint firstAttribute="height" constant="120" id="Ja2-ZL-vFs"/>
                                                         </constraints>
                                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="QtR-Ow-F5q">
-                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="itemSize" width="128" height="120"/>
                                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="60" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells>
                                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="6BA-wk-Wqu" customClass="CategoryCollectionViewCell" customModule="Yummi_App" customModuleProvider="target">
-                                                                <rect key="frame" x="20" y="-4" width="128" height="128"/>
+                                                                <rect key="frame" x="20" y="0.0" width="128" height="120"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZjE-bs-2p5">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="120"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                 </collectionViewCellContentView>
                                                             </collectionViewCell>
@@ -199,7 +199,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2uY-Sx-6GG">
-                                                <rect key="frame" x="0.0" y="228" width="414" height="352"/>
+                                                <rect key="frame" x="0.0" y="174" width="414" height="352"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular Dishes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDn-lZ-wP3">
                                                         <rect key="frame" x="20" y="20" width="374" height="24"/>
@@ -210,21 +210,21 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="trJ-9b-QGj">
+                                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="trJ-9b-QGj">
                                                         <rect key="frame" x="0.0" y="52" width="414" height="300"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="300" id="fiF-6F-zR2"/>
                                                         </constraints>
-                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="cGG-cD-Uqe">
+                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="cGG-cD-Uqe">
                                                             <size key="itemSize" width="128" height="128"/>
                                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="60" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells>
                                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="r76-89-MCl" customClass="DishPortraitCollectionViewCell" customModule="Yummi_App" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                <rect key="frame" x="20" y="0.0" width="128" height="128"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wpn-Lh-g48">
                                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -251,7 +251,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LtE-VM-cWx">
-                                                <rect key="frame" x="0.0" y="636" width="414" height="172"/>
+                                                <rect key="frame" x="0.0" y="528" width="414" height="172"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chef's Specials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE0-eo-bkF">
                                                         <rect key="frame" x="20" y="20" width="374" height="24"/>
@@ -302,23 +302,23 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Sp2-ZY-lXB" firstAttribute="bottom" secondItem="VUM-6j-k8z" secondAttribute="bottom" id="MDD-ED-I6O"/>
-                                    <constraint firstItem="VUM-6j-k8z" firstAttribute="leading" secondItem="Sp2-ZY-lXB" secondAttribute="leading" id="YIs-75-Lbd"/>
-                                    <constraint firstItem="VUM-6j-k8z" firstAttribute="top" secondItem="Sp2-ZY-lXB" secondAttribute="top" id="i34-IF-7gY"/>
-                                    <constraint firstItem="Sp2-ZY-lXB" firstAttribute="trailing" secondItem="VUM-6j-k8z" secondAttribute="trailing" id="k9D-pI-vLV"/>
-                                    <constraint firstItem="VUM-6j-k8z" firstAttribute="width" secondItem="Mp7-gx-ELG" secondAttribute="width" id="qJv-3d-Y49"/>
+                                    <constraint firstAttribute="trailing" secondItem="VUM-6j-k8z" secondAttribute="trailing" id="M1Q-Lv-Nsb"/>
+                                    <constraint firstAttribute="bottom" secondItem="VUM-6j-k8z" secondAttribute="bottom" id="ZjT-0o-Bvv"/>
+                                    <constraint firstItem="VUM-6j-k8z" firstAttribute="leading" secondItem="Mp7-gx-ELG" secondAttribute="leading" id="foE-SK-Bz3"/>
+                                    <constraint firstItem="VUM-6j-k8z" firstAttribute="top" secondItem="Mp7-gx-ELG" secondAttribute="top" id="sz9-WM-Vi7"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="RUs-eb-XD2"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="Sp2-ZY-lXB"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="QXV-GM-VHF"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="H1R-mE-zIL"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="u4g-4c-veF"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="u4g-4c-veF" firstAttribute="trailing" secondItem="Mp7-gx-ELG" secondAttribute="trailing" id="Avu-2v-G2s"/>
-                            <constraint firstItem="Mp7-gx-ELG" firstAttribute="top" secondItem="u4g-4c-veF" secondAttribute="top" id="BCX-3H-OPe"/>
-                            <constraint firstItem="u4g-4c-veF" firstAttribute="bottom" secondItem="Mp7-gx-ELG" secondAttribute="bottom" constant="-34" id="Fgp-Xn-zNI"/>
-                            <constraint firstItem="Mp7-gx-ELG" firstAttribute="leading" secondItem="u4g-4c-veF" secondAttribute="leading" id="Izx-rR-ZPC"/>
+                            <constraint firstItem="Mp7-gx-ELG" firstAttribute="trailing" secondItem="u4g-4c-veF" secondAttribute="trailing" id="C8O-Hh-gH7"/>
+                            <constraint firstItem="Mp7-gx-ELG" firstAttribute="top" secondItem="u4g-4c-veF" secondAttribute="top" id="DUy-WT-eC9"/>
+                            <constraint firstAttribute="bottom" secondItem="Mp7-gx-ELG" secondAttribute="bottom" id="ZTy-WQ-YYn"/>
+                            <constraint firstItem="Mp7-gx-ELG" firstAttribute="leading" secondItem="u4g-4c-veF" secondAttribute="leading" id="ef4-fQ-AGG"/>
+                            <constraint firstItem="VUM-6j-k8z" firstAttribute="width" secondItem="U3Z-aJ-1ap" secondAttribute="width" id="wAN-Md-lX7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Yummie" id="wSf-w5-0KR">
